@@ -1,3 +1,12 @@
+Sat Sep 06 10:24:33 2014  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/gnome-genius.gel: fix New Program crash
+
+	* examples/easy-matrix-examples.gel, examples/rsa.gel: Add
+	  code for creating nice classroom examples for easily hand
+	  computable RREF and eigenvalues, and add an example of computing
+	  an RSA key and encryption/decryption with it
+
 Fri Sep 05 21:20:02 2014  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/graphing.c: Add PlotWindowPresent
